force-app/main/default/objects/ccrz__E_RulePricingModifier__c/ccrz__E_RulePricingModifier__c.object-meta.xml
<CustomObject>
    <label>CC Rule Pricing Modifier</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Rule Pricing Modifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Rule Pricing Modifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>