force-app/main/default/objects/ccrz__E_RulePricingModifier__c/fields/ccrz__Rule__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>ccrz__E_Rule__c</referenceTo>
    <relationshipLabel>Rule Pricing Modifiers</relationshipLabel>
    <relationshipName>E_RULE_MODIFIERS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>