force-app/main/default/objects/ccrz__E_RulePricingModifier__c/fields/ccrz__RulePriceModifierId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RulePriceModifierId__c</fullName>
    <externalId>true</externalId>
    <label>Rule Price Modifier Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>