force-app/main/default/objects/ccrz__E_RulePricingModifier__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>